Worked on api app and turbo config

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,7 @@
 {
     "name": "@sodium/db",
+    "main": "src/index.ts",
+    "types": "src/index.ts",
     "scripts": {
       "prisma": "prisma",
       "migrate": "prisma migrate dev",
