--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   pg:
     image: postgres:16
@@ -6,13 +5,17 @@ services:
       POSTGRES_USER: sodium
       POSTGRES_PASSWORD: sodium
       POSTGRES_DB: sodium
+      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
     ports: ["5432:5432"]
     healthcheck: { test: ["CMD-SHELL", "pg_isready -U sodium"], interval: 5s, timeout: 5s, retries: 10 }
+    volumes:
+      - ./postgresql.conf:/etc/postgresql/postgresql.conf
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
   redis:
     image: redis:7
     ports: ["6379:6379"]
   minio:
-    image: minio/minio:RELEASE.2025-01-11T06-03-02Z
+    image: minio/minio:latest
     command: server /data --console-address ":9090"
     environment:
       MINIO_ROOT_USER: devaccess
