--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "pipeline": {
+    "tasks": {
       "build": { "dependsOn": ["^build"], "outputs": ["dist/**", ".next/**", "build/**"] },
       "dev": { "cache": false, "persistent": true },
       "lint": {},
