set up local database and media upload

--- a/postgresql.conf
+++ b/postgresql.conf
@@ -9,6 +9,7 @@ log_connections = off
 log_disconnections = off
 
 # Connection settings
+listen_addresses = '*'
 max_connections = 100
 shared_buffers = 128MB
 effective_cache_size = 4GB
